Initialising Canvases and registeing event handlers

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,12 @@
       if (state === 'complete') {
           // Step 1
           drawCanvas();
+
+          // Step 2
+          initialiseFabricJSCanvases();
+
+          // Step 3
+          addEventHandlersToCanvases();
       }
     };
 
