Exercise 2 (bonus) Drag and drop feature

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>FabricJS</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Using jquery as running into maximum stack range error for deep copy -->
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <!-- <script type="text/javascript" src="/js/deepCopyObject.js"></script> -->
+
     <script type="text/javascript" src="/js/fabric.js"></script>
 </head>
 <body>
